More work on examples page + fix touch handling on mobile

--- a/examples.css
+++ b/examples.css
@@ -14,3 +14,29 @@
 .header {
 	text-align: center;
 }
+
+#examples {
+	margin-top: 50px;
+}
+
+#example1 {
+	width: 190px;
+	height: 338px;
+	background-color: rgb(65, 105, 142);
+	margin: 0 auto;
+	overflow: hidden;
+	-webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
+}
+
+#example1 .pane {
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	margin-left: 80px;
+}
+
+#example1 .nav-bar {
+	background-color: rgb(181, 225, 226);
+	width: 100%;
+	height: 12%;
+}
